--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "sass": "^1.48.0",
-    "web-vitals": "^2.1.3"
+    "web-vitals": "^2.1.3",
+    "node": "16.13.2"
   },
   "scripts": {
     "start": "react-scripts start",
